2019-12-17  Karl Berry  <karl@freefriends.org>

	* am/web.am (web_tests): add tests/bibtex-bigauth.test (forgot
	yesterday).

2019-12-16  Karl Berry  <karl@freefriends.org>

	* bibtex.ch (overflow_buffer [46]): more comments.
	(copy_char [251]): call overflow_buffer (to reallocate)
	  if field_vl_str (aka ex_buf) is full instead of giving up.
	Original report from David Williams about a lengthy author list:
	  https://tug.org/pipermail/texhax/2019-December/024121.html
	* tests/bibtex-bigauth.{test,tex,bib,aux}: new files.

2019-12-15  Karl Berry  <karl@freefriends.org>

	* bibtex.ch: somehow the WEB module numbers in comments got off
	by one after module 30 or so. Sigh.

	* bibtex.ch (Open this .aux file [141]): if -terse,
	only log the "A level-N auxiliary file" message, instead of print.

2019-12-10  Hironori KITAGAWA  <h_kitagawa2001@yahoo.co.jp>

	* ac/web2c.ac (etex, ptex, eptex, uptex, euptex, pdftex): use zlib.
	* texmfmp.h (FMT_COMPRESS): define if pTeX || epTeX || upTeX || eupTeX
	|| eTeX || pdfTeX || XeTeX.
	(wopenin, do_dump, etc.) [FMT_COMPRESS]: change conditional from XeTeX.
	* zlib-fmt.ch: new file to declare word_file as gzFile
	instead of file of memory_word.

2019-09-23  Karl Berry  <karl@freefriends.org>

	* patgen.ch (trie_size),
	(triec_size): reduce again, back to the original values,
	10,000,000 and 5,000,000. A sad story.
	Report from Mojca, 23 Sep 2019 21:21:42.

2019-08-09  Karl Berry  <karl@freefriends.org>

	* tex.ch (53.1374): only log \openout files if the log_openout
	config value is true. Report from David Fuchs.
	* cpascal.h (texmfyes): #define texmf_yesno, for web visibility.
	* triptest.test: no need to remove \openout lines since they are
	no longer written.
	* triptrap/trip.diffs: update.

2019-08-06  Karl Berry  <karl@freefriends.org>

	* texmfmp-help.h (ALEPHHELP, EPTEXHELP, ETEXHELP, EUPTEXHELP,
	MFHELP, PDFTEXHELP, PTEXHELP, TEXHELP, UPTEXHELP, XETEXHELP):
	add -cnf-line. (I.e., everything but the lua-based engines,