@@ -1,6 +1,6 @@
 #! /bin/sh -vx
 # $Id$
-# Copyright 2017-2018 Karl Berry <tex-live@tug.org>
+# Copyright 2017-2019 Karl Berry <tex-live@tug.org>
 # Copyright 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
@@ -49,8 +49,10 @@ is_OK=:
 set -x
 
 # get same filename in log
-$LN_S $testdir/trap.mf .
+rm -f trap.mf
+$LN_S $testdir/trap.mf . || exit 1
 
+rm -f trap.base
 ../mf --progname=inimf <$testdir/mftrap1.in >mftrapin.fot
 if test ! -s trap.base; then
   echo "*** trap.base not created by mftrap1.in, investigate!" >&2
