@@ -1,5 +1,9 @@
 2019-12-17  Karl Berry  <karl@freefriends.org>
 
+	* mftraptest.test,
+	triptest.test: rm the .base/.fmt file before remaking it,
+	so we can't find one left over from a previous run.
+
 	* am/web.am (web_tests): add tests/bibtex-bigauth.test (forgot
 	yesterday).
 
